--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "MongoDB ODM Library",
   "main": "tyranid.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://dimensia.github.com/tyranidjs"
+    "url": "https://github.com/tyranid-org/tyranid"
   },
   "author": "",
   "license": "ISC",
