--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^1.4.3",
-    "promised-mongo": "git://github.com/gordonmleigh/promised-mongo.git#v0.11.5"
+    "promised-mongo": "git://github.com/gordonmleigh/promised-mongo.git#v0.11.5",
+    "lodash": "^3.9.3"
   },
   "devDependencies": {
     "chai": "^3.0.0",
@@ -22,7 +23,6 @@
     "es6-promise": "^2.3.0",
     "gulp-jshint": "^1.11.0",
     "gulp-mocha": "^2.1.1",
-    "lodash": "^3.9.3",
     "mocha": "^2.2.5"
   }
 }
