--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tyranid",
-  "version": "0.0.12",
-  "description": "MongoDB ODM Library",
+  "version": "0.0.14",
+  "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "tyranid.js",
   "scripts": {
     "test": "npm test"
