--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.0",
     "gulp-mocha": "^2.1.1",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "yargs": "^3.12.0"
   }
 }
