--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/tyranid-org/tyranid"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache 2",
   "dependencies": {
     "mongodb": "^1.4.3",
     "promised-mongo": "git://github.com/gordonmleigh/promised-mongo.git#v0.11.5",
