--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.0.64",
+  "version": "0.0.65",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "tyranid.js",
   "scripts": {
@@ -21,6 +21,7 @@
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "es6-promise": "^2.3.0",
+    "eslint": "^1.1.0",
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.0",
     "gulp-mocha": "^2.1.1",
