eslint fixes, use babel runtime for better compatibility

--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,6 @@
   "sourceMaps" : "both",
   "modules" : "common",
   "stage": 0,
-  "compact": false
+  "compact" : false,
+  "optional" : [ "runtime" ]
 }
