--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: node_js
 services:
   - mongodb
 
+before_script:
+  npm install -g gulp
+
 #test on two node.js versions: 0.6 and 0.8
 node_js:
   - 0.10
