--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
   "scripts": {
-    "test": "gulp test",
-    "prepublish" : "gulp eslint && gulp test && gulp compile"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
