--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/tyranid.js",
   "scripts": {
     "test": "gulp test",
-    "prepublish" : "gulp compile"
+    "prepublish": "gulp compile"
   },
   "repository": {
     "type": "git",
@@ -14,11 +14,11 @@
   "author": "",
   "license": "Apache 2",
   "dependencies": {
+    "babel": "^5.8.23",
+    "babel-runtime": "^5.8.20",
     "lodash": "^3.9.3",
     "mongodb": "^1.4.3",
-    "babel-runtime": "^5.8.20",
-    "babel": "^5.8.23",
-    "promised-mongo": "git://github.com/gordonmleigh/promised-mongo.git#v0.11.5"
+    "promised-mongo": "^1.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.0",
