--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.0.77",
+  "version": "0.0.78",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "babel-runtime": "^5.8.20",
     "lodash": "^3.9.3",
     "mongodb": "^1.4.3",
-    "promised-mongo": "^1.2.0"
+    "promised-mongo": "git+https://github.com/CrossLead/promised-mongo.git#ec25ae4219f8bb7a064b19353627545fcbbe759f"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.0",
