--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "babel": "^5.8.23",
     "babel-runtime": "^5.8.20",
-    "faker": "^3.0.1",
+    "faker": "git+https://github.com/bsouthga/faker.js.git#ddc474344d1b81a073e13a1047eec7589413759b",
     "hooker": "^0.2.3",
     "lodash": "^3.9.3",
     "mongodb": "^1.4.3",
