--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.0.114",
+  "version": "0.0.115",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
   "scripts": {
@@ -19,6 +19,7 @@
     "faker": "git+https://github.com/bsouthga/faker.js.git#ddc474344d1b81a073e13a1047eec7589413759b",
     "hooker": "^0.2.3",
     "lodash": "^3.9.3",
+    "moment": "^2.11.2",
     "mongodb": "^1.4.3",
     "promised-mongo": "git+https://github.com/CrossLead/promised-mongo.git#ec25ae4219f8bb7a064b19353627545fcbbe759f"
   },
