--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.0.121",
+  "version": "0.0.122",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
   "scripts": {
@@ -12,15 +12,17 @@
     "url": "https://github.com/tyranid-org/tyranid"
   },
   "author": "",
-  "license": "Apache 2",
+  "license": "Apache-2.0",
   "dependencies": {
     "babel": "^5.8.23",
     "babel-runtime": "^5.8.20",
+    "continuation-local-storage": "^3.1.6",
     "faker": "git+https://github.com/bsouthga/faker.js.git#ddc474344d1b81a073e13a1047eec7589413759b",
     "hooker": "^0.2.3",
     "lodash": "^3.9.3",
     "moment": "^2.11.2",
     "mongodb": "^1.4.3",
+    "on-finished": "^2.3.0",
     "promised-mongo": "git+https://github.com/CrossLead/promised-mongo.git#ec25ae4219f8bb7a064b19353627545fcbbe759f"
   },
   "devDependencies": {
