--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ before_install:
 
 before_script:
   - "until nc -z localhost 27017; do echo Waiting for MongoDB; sleep 1; done"
+  - "npm install -g npm@3"
   - "npm install -g gulp"
 
 #test on two node.js versions: 0.6 and 0.8
 node_js:
   - 0.10
-
   # configure notifications (email, IRC, campfire etc)
   # please update this section to your needs!
   #notifications:
