--- a/package.json
+++ b/package.json
@@ -38,5 +38,12 @@
     "gulp-sourcemaps": "^1.5.2",
     "mocha": "^2.2.5",
     "yargs": "^3.12.0"
+  },
+  "babel": {
+    "sourceMaps" : "both",
+    "modules" : "common",
+    "stage": 0,
+    "compact" : false,
+    "optional" : [ "runtime" ]
   }
 }
