--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "babel-preset-stage-0": "6.5.0",
     "chalk": "^1.1.1",
     "continuation-local-storage": "^3.1.6",
-    "faker": "git+https://github.com/bsouthga/faker.js.git#ddc474344d1b81a073e13a1047eec7589413759b",
+    "faker": "^3.1.0",
     "hooker": "^0.2.3",
     "lodash": "^3.9.3",
     "moment": "^2.11.2",
