--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
   "scripts": {
-    "test": "gulp test",
-    "prepublish": "gulp compile"
+    "test": "npm run mocha",
+    "babel": "./node_modules/.bin/babel ./dist-es6 --out-dir ./dist-node4",
+    "build": "rm -rf ./dist-es6/ ./dist-node4/ && npm run tscompile && npm run babel && cp ./package.json ./dist-node4/",
+    "copy-typings": "cp -r ./typings ./dist-es6 && cp -r ./typings ./dist-node4",
+    "docs": "node -e \"require('./doc/doc').default();\"",
+    "mocha": "./node_modules/.bin/mocha --compilers js:babel-register ./dist-node4/test/test.js",
+    "pretest": "npm run build",
+    "prepublish": "npm test",
+    "tscompile": "./node_modules/typescript/bin/tsc",
+    "lint": "./node_modules/.bin/eslint ./src/**/*.js ./test/**/*.js",
+    "watch-babel": "./node_modules/.bin/babel --watch ./dist/es6 --out-dir ./dist/node4",
+    "watch-tsc": "./node_modules/typescript/bin/tsc -w -d -p ./",
+    "watch": "./node_modules/.bin/concurrently --kill-others 'npm run watch-babel' 'npm run watch-tsc'"
   },
   "repository": {
     "type": "git",
@@ -27,11 +38,12 @@
     "on-finished": "^2.3.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.7.5",
     "babel-core": "6.7.2",
+    "babel-eslint": "5.0.0",
     "babel-plugin-transform-class-properties": "6.6.0",
     "babel-preset-es2015-node4": "2.0.3",
     "babel-preset-stage-0": "6.5.0",
-    "babel-eslint": "5.0.0",
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
@@ -40,6 +52,7 @@
     "gulp-mocha": "^2.1.1",
     "gulp-sourcemaps": "^1.5.2",
     "mocha": "^2.2.5",
+    "typescript": "^1.9.0-dev.20160417",
     "yargs": "^3.12.0"
   },
   "babel": {
