--- a/package.json
+++ b/package.json
@@ -39,30 +39,18 @@
     "babel-cli": "^6.7.5",
     "babel-core": "6.7.2",
     "babel-eslint": "5.0.0",
-    "babel-plugin-transform-class-properties": "6.6.0",
     "babel-preset-es2015-node4": "2.0.3",
-    "babel-preset-stage-0": "6.5.0",
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-eslint": "1.1.1",
-    "gulp-mocha": "^2.1.1",
-    "gulp-sourcemaps": "^1.5.2",
     "mocha": "^2.2.5",
     "typescript": "^1.9.0-dev.20160417",
-    "typings": "^0.7.12",
-    "yargs": "^3.12.0"
+    "typings": "^0.7.12"
   },
   "babel": {
     "sourceMaps": "both",
     "compact": false,
     "presets": [
-      "stage-0",
       "es2015-node4"
-    ],
-    "plugins": [
-      "transform-class-properties"
     ]
   }
 }
