--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tyranid",
   "version": "0.0.165",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
-  "main": "dist/tyranid.js",
+  "main": "dist/node-4/src/tyranid.js",
   "scripts": {
     "test": "npm run mocha",
     "babel": "./node_modules/.bin/babel ./dist-es6 --out-dir ./dist-node4",
