--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.0.165",
+  "version": "0.0.166",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
   "scripts": {
@@ -17,6 +17,8 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "babel-core": "6.7.2",
+    "babel-preset-es2015": "^6.6.0",
     "chalk": "^1.1.1",
     "continuation-local-storage": "^3.1.6",
     "faker": "^3.1.0",
@@ -27,7 +29,6 @@
     "on-finished": "^2.3.0"
   },
   "devDependencies": {
-    "babel-core": "6.7.2",
     "babel-plugin-transform-class-properties": "6.6.0",
     "babel-preset-es2015-node4": "2.0.3",
     "babel-preset-stage-0": "6.5.0",
