--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.0.176",
+  "version": "0.0.177",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "chalk": "^1.1.1",
     "continuation-local-storage": "^3.1.6",
     "faker": "^3.1.0",
+    "glob": "^7.0.5",
     "hooker": "^0.2.3",
     "lodash": "^3.9.3",
     "moment": "^2.11.2",
