--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.178",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
+  "jsnext:main": "src/tyranid.js",
+  "typings": "./tyranid.d.ts",
   "scripts": {
     "test": "gulp test",
     "prepublish": "gulp compile"
