--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "jsnext:main": "src/tyranid.js",
   "typings": "./tyranid.d.ts",
   "scripts": {
-    "test": "gulp test",
+    "test": "gulp test && npm run tsc",
+    "tsc": "./node_modules/.bin/tsc",
     "prepublish": "gulp compile"
   },
   "repository": {
