--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "noImplicitAny": false,
         "sourceMap": false
     },
-    "exclude": [
-        "node_modules"
+    "include": [
+        "./test/test-typings.ts"
     ]
 }
