--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "on-finished": "^2.3.0"
   },
   "devDependencies": {
+    "babel-eslint": "5.0.0",
     "babel-plugin-transform-class-properties": "6.6.0",
     "babel-preset-es2015-node4": "2.0.3",
     "babel-preset-stage-0": "6.5.0",
-    "babel-eslint": "5.0.0",
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
@@ -45,6 +45,7 @@
     "gulp-mocha": "^2.1.1",
     "gulp-sourcemaps": "^1.5.2",
     "mocha": "^2.2.5",
+    "typescript": "^1.8.10",
     "yargs": "^3.12.0"
   },
   "babel": {
