--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "babel-core": "6.7.2",
+    "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.6.0",
     "chalk": "^1.1.1",
     "continuation-local-storage": "^3.1.6",
