--- a/package.json
+++ b/package.json
@@ -20,33 +20,35 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.6.0",
-    "chalk": "^1.1.1",
-    "continuation-local-storage": "^3.1.6",
-    "faker": "^3.1.0",
-    "glob": "^7.0.5",
-    "hooker": "^0.2.3",
-    "lodash": "^3.9.3",
-    "moment": "^2.11.2",
-    "mongodb": "^2.1.4",
-    "on-finished": "^2.3.0"
+    "@types/express": "4.0.33",
+    "@types/mongodb": "2.1.33",
+    "babel-core": "6.14.0",
+    "babel-preset-es2015": "6.6.0",
+    "chalk": "1.1.1",
+    "continuation-local-storage": "3.1.6",
+    "faker": "3.1.0",
+    "glob": "7.0.5",
+    "hooker": "0.2.3",
+    "lodash": "3.9.3",
+    "moment": "2.11.2",
+    "mongodb": "2.1.4",
+    "on-finished": "2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "5.0.0",
     "babel-plugin-transform-class-properties": "6.6.0",
     "babel-preset-es2015-node4": "2.0.3",
     "babel-preset-stage-0": "6.5.0",
-    "chai": "^3.0.0",
-    "chai-as-promised": "^5.1.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
+    "chai": "3.0.0",
+    "chai-as-promised": "5.1.0",
+    "gulp": "3.9.0",
+    "gulp-babel": "6.1.2",
     "gulp-eslint": "1.1.1",
-    "gulp-mocha": "^2.1.1",
-    "gulp-sourcemaps": "^1.5.2",
-    "mocha": "^2.2.5",
-    "typescript": "^1.8.10",
-    "yargs": "^3.12.0"
+    "gulp-mocha": "2.1.1",
+    "gulp-sourcemaps": "1.5.2",
+    "mocha": "2.2.5",
+    "typescript": "2.0.2",
+    "yargs": "3.12.0"
   },
   "babel": {
     "sourceMaps": "both",
