--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
   "jsnext:main": "src/tyranid.js",
-  "typings": "./tyranid.d.ts",
+  "typings": "src/tyranid.d.ts",
   "scripts": {
     "test": "gulp test && npm run tsc",
     "tsc": "./node_modules/.bin/tsc",
