--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "on-finished": "2.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-eslint": "^6.1.2",
+    "babel-cli": "6.14.0",
+    "babel-eslint": "6.1.2",
     "babel-plugin-transform-class-properties": "6.6.0",
     "babel-preset-es2015-node4": "2.0.3",
     "babel-preset-stage-0": "6.5.0",
@@ -53,6 +53,8 @@
     "chai-as-promised": "5.1.0",
     "codecov": "1.0.1",
     "eslint": "3.9.0",
+    "jquery": "3.1.1",
+    "jsdom": "9.8.3",
     "mocha": "2.2.5",
     "nyc": "8.3.0",
     "typescript": "2.0.2",
