--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "watch": "babel src --out-dir dist -q -w",
     "babel": "babel src --out-dir dist -q",
     "eslint": "eslint ./src ./test --ignore-pattern test/test-typings.js",
-    "mocha": "mocha './test/test.js' --read false --require 'babel-core/register'",
-    "mocha-coverage": "nyc --require babel-core/register mocha './test/test.js' --read false",
+    "mocha": "./node_modules/.bin/mocha ./test/test.js --read false --require ../../../node_modules/babel-core/register",
+    "mocha-coverage": "./node_modules/.bin/nyc --require ./node_modules/babel-core/register mocha ./test/test.js --read false",
     "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov",
     "tsc": "tsc",
     "docs": "babel-node ./doc/doc.js"
