--- a/.eslintrc
+++ b/.eslintrc
@@ -46,7 +46,8 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "globals": {
     "describe": true,
