--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@types/express": "4.0.34",
     "@types/mongodb": "2.1.36",
     "babel-core": "6.14.0",
-    "babel-preset-es2015": "6.6.0",
     "babel-plugin-transform-class-properties": "6.6.0",
+    "babel-preset-es2015": "6.6.0",
     "babel-preset-es2015-node4": "2.0.3",
     "babel-preset-stage-0": "6.5.0",
     "chalk": "1.1.1",
@@ -44,7 +44,8 @@
     "lodash": "3.9.3",
     "moment": "2.11.2",
     "mongodb": "2.1.4",
-    "on-finished": "2.3.0"
+    "on-finished": "2.3.0",
+    "uglify-js": "2.8.16"
   },
   "devDependencies": {
     "babel-cli": "6.14.0",
