--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mocha-coverage": "nyc --require babel-core/register mocha \"./test/test.js\" --read false",
     "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov",
     "tsc": "tsc",
-    "docs": "babel-node ./doc/doc.js"
+    "docs": "babel-node ./doc/doc.js",
+    "server": "node ./test/serverBoot.js"
   },
   "repository": {
     "type": "git",
@@ -54,9 +55,11 @@
     "chai-as-promised": "5.1.0",
     "codecov": "1.0.1",
     "eslint": "3.9.0",
+    "express": "^4.15.2",
     "jquery": "3.1.1",
     "jsdom": "9.8.3",
     "mocha": "2.2.5",
+    "node-fetch": "^1.6.3",
     "nyc": "8.3.0",
     "typescript": "2.1.4",
     "yargs": "3.12.0"
