--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.1.58",
+  "version": "0.1.59",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/tyranid.js",
   "jsnext:main": "src/tyranid.js",
@@ -51,15 +51,16 @@
   "devDependencies": {
     "babel-cli": "6.14.0",
     "babel-eslint": "6.1.2",
+    "body-parser": "1.17.2",
     "chai": "3.0.0",
     "chai-as-promised": "5.1.0",
     "codecov": "1.0.1",
     "eslint": "3.9.0",
-    "express": "^4.15.2",
+    "express": "4.15.2",
     "jquery": "3.1.1",
     "jsdom": "9.8.3",
     "mocha": "2.2.5",
-    "node-fetch": "^1.6.3",
+    "node-fetch": "1.7.1",
     "nyc": "8.3.0",
     "typescript": "2.1.4",
     "yargs": "3.12.0"
