--- a/package.json
+++ b/package.json
@@ -2,21 +2,19 @@
   "name": "tyranid",
   "version": "0.2.2",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
-  "main": "dist/tyranid.js",
-  "jsnext:main": "src/tyranid.js",
+  "main": "dist/src/tyranid.js",
   "typings": "src/tyranid.d.ts",
   "scripts": {
     "test": "npm run mocha && npm run tsc",
     "test-travis": "npm run pretest && npm run mocha-coverage && npm run tsc",
-    "pretest": "npm run babel",
+    "pretest": "npm run tsc",
     "prepublish": "npm run test",
-    "watch": "babel src --out-dir dist -q -w",
-    "babel": "babel src --out-dir dist -q",
+    "watch": "rm -rf ./dist/ && tsc -w",
+    "tsc": "rm -rf ./dist/ && tsc",
     "eslint": "eslint ./src ./test --ignore-pattern test/test-typings.js",
-    "mocha": "mocha \"./test/test.js\" --read false --require \"babel-core/register\"",
-    "mocha-coverage": "nyc --require babel-core/register mocha \"./test/test.js\" --read false",
-    "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov",
-    "tsc": "tsc",
+    "mocha": "mocha \"./dist/test/test.js\" --read false",
+    "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "docs": "babel-node ./doc/doc.js",
     "server": "node ./test/serverBoot.js"
   },
@@ -32,11 +30,6 @@
   "dependencies": {
     "@types/express": "4.0.36",
     "@types/mongodb": "2.2.7",
-    "babel-core": "6.14.0",
-    "babel-plugin-transform-class-properties": "6.6.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-es2015-node4": "2.0.3",
-    "babel-preset-stage-0": "6.5.0",
     "chalk": "1.1.1",
     "continuation-local-storage": "3.1.6",
     "faker": "3.1.0",
@@ -49,8 +42,6 @@
     "uglify-js": "2.8.16"
   },
   "devDependencies": {
-    "babel-cli": "6.14.0",
-    "babel-eslint": "6.1.2",
     "body-parser": "1.17.2",
     "chai": "3.0.0",
     "chai-as-promised": "5.1.0",
@@ -64,16 +55,5 @@
     "nyc": "8.3.0",
     "typescript": "2.4.1",
     "yargs": "3.12.0"
-  },
-  "babel": {
-    "sourceMaps": "both",
-    "compact": false,
-    "presets": [
-      "stage-0",
-      "es2015-node4"
-    ],
-    "plugins": [
-      "transform-class-properties"
-    ]
   }
 }
