--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "mocha": "mocha \"./dist/test/test.js\" --read false",
     "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
-    "docs": "babel-node ./doc/doc.js",
+    "docs": "ts-node ./doc/doc.js",
     "server": "node ./test/serverBoot.js"
   },
   "repository": {
@@ -30,6 +30,10 @@
   "dependencies": {
     "@types/express": "4.0.36",
     "@types/mongodb": "2.2.7",
+    "babel-core": "^6.25.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chalk": "1.1.1",
     "continuation-local-storage": "3.1.6",
     "faker": "3.1.0",
@@ -53,6 +57,7 @@
     "mocha": "2.2.5",
     "node-fetch": "1.7.1",
     "nyc": "8.3.0",
+    "ts-node": "^3.2.0",
     "typescript": "2.4.1",
     "yargs": "3.12.0"
   }
