--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "node-fetch": "1.7.1",
     "nyc": "8.3.0",
     "ts-node": "^3.2.0",
+    "tslint": "^5.5.0",
     "typescript": "2.4.1",
     "yargs": "3.12.0"
   }
