feat: switch to tslint

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "dist/src/tyranid.js",
   "typings": "src/tyranid.d.ts",
   "scripts": {
-    "test": "npm run mocha && npm run tsc",
-    "test-travis": "npm run pretest && npm run mocha-coverage && npm run tsc",
-    "pretest": "npm run tsc",
+    "test": "npm run mocha",
+    "test-travis": "npm run pretest && npm run mocha-coverage",
+    "pretest": "npm run lint && npm run tsc",
     "prepublish": "npm run test",
     "watch": "rm -rf ./dist/ && tsc -w",
     "tsc": "rm -rf ./dist/ && tsc",
-    "eslint": "eslint ./src ./test --ignore-pattern test/test-typings.js",
+    "lint": "tslint './{test,src}/**/*.{ts,js}' --format stylish --fix",
     "mocha": "mocha \"./dist/test/test.js\" --read false",
     "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
