--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "moment": "2.11.2",
     "mongodb": "2.1.4",
     "on-finished": "2.3.0",
-    "uglify-js": "2.8.16"
+    "uglify-js": "2.8.16",
+    "typescript": "2.4.1"
   },
   "devDependencies": {
     "body-parser": "1.17.2",
@@ -53,9 +54,8 @@
     "mocha": "2.2.5",
     "node-fetch": "1.7.1",
     "nyc": "8.3.0",
-    "ts-node": "^3.2.0",
-    "tslint": "^5.5.0",
-    "typescript": "2.4.1",
+    "ts-node": "3.2.0",
+    "tslint": "5.5.0",
     "yargs": "3.12.0"
   }
 }
