--- a/package.json
+++ b/package.json
@@ -2,22 +2,20 @@
   "name": "tyranid",
   "version": "0.2.2",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
-  "main": "dist/tyranid.js",
-  "jsnext:main": "src/tyranid.js",
+  "main": "dist/src/tyranid.js",
   "typings": "src/tyranid.d.ts",
   "scripts": {
-    "test": "npm run mocha && npm run tsc",
-    "test-travis": "npm run pretest && npm run mocha-coverage && npm run tsc",
-    "pretest": "npm run babel",
+    "test": "npm run mocha",
+    "test-travis": "npm run pretest && npm run mocha-coverage",
+    "pretest": "npm run lint && npm run tsc",
     "prepublish": "npm run test",
-    "watch": "babel src --out-dir dist -q -w",
-    "babel": "babel src --out-dir dist -q",
-    "eslint": "eslint ./src ./test --ignore-pattern test/test-typings.js",
-    "mocha": "mocha \"./test/test.js\" --read false --require \"babel-core/register\"",
-    "mocha-coverage": "nyc --require babel-core/register mocha \"./test/test.js\" --read false",
-    "coverage": "./node_modules/.bin/nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov",
-    "tsc": "tsc",
-    "docs": "babel-node ./doc/doc.js",
+    "watch": "rm -rf ./dist/ && tsc -w",
+    "tsc": "rm -rf ./dist/ && tsc",
+    "lint": "tslint './{test,src}/**/*.{ts,js}' --format stylish --fix",
+    "mocha": "mocha \"./dist/test/test.js\" --read false",
+    "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "docs": "ts-node ./doc/doc.js",
     "server": "node ./test/serverBoot.js"
   },
   "repository": {
@@ -25,18 +23,13 @@
     "url": "https://github.com/tyranid-org/tyranid"
   },
   "engine": {
-    "node": ">=4.3.0"
+    "node": ">=6.9.1"
   },
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
     "@types/express": "4.0.36",
     "@types/mongodb": "2.2.7",
-    "babel-core": "6.14.0",
-    "babel-plugin-transform-class-properties": "6.6.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-es2015-node4": "2.0.3",
-    "babel-preset-stage-0": "6.5.0",
     "chalk": "1.1.1",
     "continuation-local-storage": "3.1.6",
     "faker": "3.1.0",
@@ -46,11 +39,10 @@
     "moment": "2.11.2",
     "mongodb": "2.1.4",
     "on-finished": "2.3.0",
-    "uglify-js": "2.8.16"
+    "uglify-js": "2.8.16",
+    "typescript": "2.4.1"
   },
   "devDependencies": {
-    "babel-cli": "6.14.0",
-    "babel-eslint": "6.1.2",
     "body-parser": "1.17.2",
     "chai": "3.0.0",
     "chai-as-promised": "5.1.0",
@@ -62,18 +54,8 @@
     "mocha": "2.2.5",
     "node-fetch": "1.7.1",
     "nyc": "8.3.0",
-    "typescript": "2.4.1",
+    "ts-node": "3.2.0",
+    "tslint": "5.5.0",
     "yargs": "3.12.0"
-  },
-  "babel": {
-    "sourceMaps": "both",
-    "compact": false,
-    "presets": [
-      "stage-0",
-      "es2015-node4"
-    ],
-    "plugins": [
-      "transform-class-properties"
-    ]
   }
 }
