--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.2.27",
+  "version": "0.2.28",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/src/tyranid.js",
   "typings": "src/tyranid.d.ts",
@@ -39,7 +39,7 @@
     "moment": "2.11.2",
     "mongodb": "2.2.30",
     "on-finished": "2.3.0",
-    "socket.io": "^2.0.3",
+    "socket.io": "2.0.3",
     "typescript": "2.4.1",
     "uglify-js": "2.8.16"
   },
