--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "faker": "3.1.0",
     "glob": "7.0.5",
     "hooker": "0.2.3",
+    "json-stable-stringify": "1.0.1",
     "lodash": "3.9.3",
     "moment": "2.11.2",
     "mongodb": "2.2.30",
