--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 before_script:
 
 script:
-  - #npm run test-travis
+  - npm run test-travis
 
 after_success:
   - npm run coverage
