--- a/package.json
+++ b/package.json
@@ -43,20 +43,20 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "@types/chai": "^3.5.2",
+    "@types/chai": "3.5.0",
     "@types/express": "4.0.36",
     "@types/lodash": "3.10.1",
-    "@types/mocha": "^2.2.43",
+    "@types/mocha": "2.5.3",
     "@types/mongodb": "2.2.7",
     "body-parser": "1.17.2",
-    "chai": "3.5.2",
+    "chai": "3.5.0",
     "chai-as-promised": "5.1.0",
     "codecov": "1.0.1",
     "eslint": "3.9.0",
     "express": "4.15.2",
     "jquery": "3.1.1",
     "jsdom": "9.8.3",
-    "mocha": "2.2.43",
+    "mocha": "2.5.3",
     "node-fetch": "1.7.1",
     "nyc": "8.3.0",
     "ts-node": "3.2.0",
