--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "uuid": "^3.1.0"
   },
   "peerDependencies": {
-    "mongodb": "2.2.33",
+    "mongodb": "2.2.33"
   },
   "devDependencies": {
     "@types/chai": "3.5.0",
