--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "json-stable-stringify": "1.0.1",
     "lodash": "^3.10.1",
     "moment": "2.11.2",
-    "mongodb": "2.2.33",
     "on-finished": "2.3.0",
     "socket.io": "2.0.3",
     "typescript": "^2.5.3",
     "uglify-js": "2.8.16",
     "uuid": "^3.1.0"
+  },
+  "peerDependencies": {
+    "typescript": "^2.5.3",
+    "mongodb": "^2.2.33"
   },
   "devDependencies": {
     "@types/chai": "3.5.0",
@@ -57,9 +60,11 @@
     "jquery": "3.1.1",
     "jsdom": "9.8.3",
     "mocha": "2.5.3",
+    "mongodb": "2.2.33",
     "node-fetch": "1.7.1",
     "nyc": "8.3.0",
     "ts-node": "3.2.0",
+    "typescript": "^2.5.3",
     "tslint": "5.5.0",
     "yargs": "3.12.0"
   }
