--- a/package.json
+++ b/package.json
@@ -2,5 +2,33 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "@types/chai": "3.5.0",
+    "@types/commander": "2.9.1",
+    "@types/express": "4.0.36",
+    "@types/lodash": "3.10.1",
+    "@types/mocha": "2.2.43",
+    "@types/mongodb": "2.2.7",
+    "@types/node": "6.0.52",
+    "@types/socket.io-client": "^1.4.31",
+    "ava": "0.16.0",
+    "body-parser": "1.17.2",
+    "chai": "3.5.0",
+    "chai-as-promised": "5.1.0",
+    "codecov": "1.0.1",
+    "eslint": "3.9.0",
+    "express": "4.15.2",
+    "jquery": "3.1.1",
+    "jsdom": "9.8.3",
+    "lerna": "^2.9.1",
+    "mocha": "2.5.3",
+    "mongodb": "2.2.33",
+    "node-fetch": "1.7.1",
+    "nyc": "8.3.0",
+    "ts-node": "^3.2.0",
+    "tslint": "5.5.0",
+    "typescript": "^2.5.3",
+    "yargs": "3.12.0"
+  }
 }
