--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "test": "sh ./scripts/test.sh"
+  },
   "devDependencies": {
     "@types/chai": "3.5.0",
     "@types/commander": "2.9.1",
@@ -28,7 +31,7 @@
     "nyc": "8.3.0",
     "ts-node": "^3.2.0",
     "tslint": "5.5.0",
-    "typescript": "^2.5.3",
+    "typescript": "^2.8.1",
     "yargs": "3.12.0"
   }
 }
