--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "nyc": "8.3.0",
     "ts-node": "^3.2.0",
     "tslint": "5.5.0",
-    "typescript": "^2.8.1",
+    "typescript": "2.5.3",
     "yargs": "3.12.0"
   }
 }
