feat: add tyranid-graphql

--- a/packages/tyranid-tdgen/tsconfig.json
+++ b/packages/tyranid-tdgen/tsconfig.json
@@ -8,6 +8,7 @@
     "pretty": true,
     "outDir": "./dist/",
     "inlineSourceMap": true,
+    "skipLibCheck": true,
     "lib": [
       "es2015"
     ],
