--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
   "devDependencies": {
     "@types/chai": "3.5.0",
     "@types/commander": "2.9.1",
-    "@types/express": "4.0.36",
+    "@types/body-parser": "1.16.8",
+    "@types/express": "^4.11.0",
+    "@types/graphql": "^0.12.3",
     "@types/lodash": "3.10.1",
     "@types/mocha": "2.2.43",
     "@types/mongodb": "2.2.7",
     "@types/node": "6.0.52",
     "@types/socket.io-client": "^1.4.31",
     "ava": "0.16.0",
-    "body-parser": "1.17.2",
     "chai": "3.5.0",
     "chai-as-promised": "5.1.0",
     "codecov": "1.0.1",
     "eslint": "3.9.0",
-    "express": "4.15.2",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "graphql-server-express": "^1.3.2",
+    "graphql-tools": "^2.19.0",
     "jquery": "3.1.1",
     "jsdom": "9.8.3",
     "lerna": "^2.9.1",
