--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "sh ./scripts/test.sh",
-    "lint": "tslint './packages/*/{test,src}/**/*.{ts,js}' --format stylish --fix"
+    "test": "npm run prettier && npm run lint && sh ./scripts/test.sh",
+    "lint": "tslint './packages/*/{test,src}/**/*.{ts,js}' --format stylish --fix",
+    "prettier": "prettier --write --loglevel error --single-quote true './packages/*/{test,src}/**/*.{ts,js}'"
   },
   "devDependencies": {
+    "@types/body-parser": "1.16.8",
     "@types/chai": "3.5.0",
     "@types/commander": "2.9.1",
-    "@types/body-parser": "1.16.8",
     "@types/express": "^4.11.0",
     "@types/graphql": "^0.12.3",
     "@types/lodash": "3.10.1",
@@ -19,11 +20,11 @@
     "@types/node": "6.0.52",
     "@types/socket.io-client": "^1.4.31",
     "ava": "0.16.0",
+    "body-parser": "^1.18.2",
     "chai": "3.5.0",
     "chai-as-promised": "5.1.0",
     "codecov": "1.0.1",
     "eslint": "3.9.0",
-    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "graphql-server-express": "^1.3.2",
     "graphql-tools": "^2.19.0",
@@ -34,8 +35,10 @@
     "mongodb": "2.2.33",
     "node-fetch": "1.7.1",
     "nyc": "8.3.0",
+    "prettier": "1.11.1",
     "ts-node": "^3.2.0",
     "tslint": "5.5.0",
+    "tslint-config-prettier": "1.10.0",
     "typescript": "2.5.3",
     "yargs": "3.12.0"
   }
