feat: docs script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "packages/*"
   ],
   "scripts": {
+    "docs": "ts-node ./doc/doc.js",
     "test": "npm run prettier && npm run lint && sh ./scripts/test.sh",
     "lint": "tslint './packages/*/{test,src}/**/*.{ts,js}' --format stylish --fix",
     "prettier": "prettier --write --loglevel error --single-quote true './packages/*/{test,src}/**/*.{ts,js}'"
