--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: trusty
 sudo: false
 services: mongodb
 script:
+  - sh ./scripts/style-check.sh
   - npm run test --silent
 cache:
   yarn: true
