--- a/packages/tyranid-tdgen/package.json
+++ b/packages/tyranid-tdgen/package.json
@@ -2,6 +2,10 @@
   "name": "tyranid-tdgen",
   "version": "0.4.3",
   "description": "Generate type definition files from tyranid schemas",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tyranid-org/tyranid"
+  },
   "main": "./dist/src/index.js",
   "typings": "./dist/src/index.d.ts",
   "bin": {
