--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tyranid",
-  "version": "0.4.67",
+  "version": "0.5.0",
   "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/src/tyranid.js",
   "typings": "src/tyranid.d.ts",
@@ -39,7 +39,7 @@
     "uuid": "^3.1.0"
   },
   "peerDependencies": {
-    "typescript": "^2.5.3",
-    "mongodb": "^2.2.33"
+    "mongodb": "^2.2.33",
+    "typescript": "^2.5.3"
   }
 }
