--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["packages/*"],
   "scripts": {
     "docs": "ts-node ./doc/doc.js",
     "test": "npm run prettier && npm run lint && sh ./scripts/test.sh",
-    "lint": "tslint './packages/*/{test,src}/**/*.{ts,js}' --format stylish --fix",
-    "prettier": "prettier --write --loglevel error --single-quote true './packages/*/{test,src}/**/*.{ts,js}'",
+    "lint":
+      "tslint './packages/*/{test,src}/{!typings}/*.{ts,js}' --format stylish --fix",
+    "prettier":
+      "prettier --write --loglevel error --single-quote true './packages/*/{test,src}/**/*.{ts,js}'",
     "watch": "cd ./packages/tyranid && npm run watch"
   },
   "devDependencies": {
