--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -1,17 +1,20 @@
 {
   "name": "tyranid",
   "version": "0.5.0",
-  "description": "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
+  "description":
+    "Metadata Library to faciliate working generically with data (MongoDB, ODM)",
   "main": "dist/src/tyranid.js",
   "typings": "src/tyranid.d.ts",
   "scripts": {
     "test": "npm run mocha",
     "test-travis": "npm run pretest && npm run mocha-coverage",
+    "generate-typings": "ts-node ./scripts/generate-typings.js",
     "pretest": "npm run tsc",
     "prepublish": "npm run test",
     "watch": "rm -rf ./dist/ && tsc -w",
     "tsc": "rm -rf ./dist/ && tsc",
-    "mocha": "mocha \"./dist/test/test.js\" --read false",
+    "mocha":
+      "npm run generate-typings && mocha \"./dist/test/test.js\" --read false",
     "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "server": "node ./test/serverBoot.js"
