feat: tsc ordering

--- a/packages/tyranid/tsconfig.json
+++ b/packages/tyranid/tsconfig.json
@@ -9,5 +9,5 @@
     "skipLibCheck": true,
     "lib": ["es2017"]
   },
-  "include": ["src", "test", "./typings/*.ts"]
+  "include": ["src", "test/models"]
 }
