--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -12,6 +12,7 @@
     "pretest": "npm run tsc",
     "prepublish": "npm run test",
     "watch": "rm -rf ./dist/ && tsc -w",
+    "tsc:tests": "npm run generate-typings && tsc -p ./test",
     "tsc": "rm -rf ./dist/ && tsc",
     "mocha":
       "npm run generate-typings && mocha \"./dist/test/test.js\" --read false",
