--- a/packages/tyranid/package.json
+++ b/packages/tyranid/package.json
@@ -14,8 +14,7 @@
     "watch": "rm -rf ./dist/ && tsc -w",
     "tsc:tests": "npm run generate-typings && tsc -p ./test",
     "tsc": "rm -rf ./dist/ && tsc",
-    "mocha":
-      "npm run generate-typings && mocha \"./dist/test/test.js\" --read false",
+    "mocha": "npm run tsc:tests && mocha \"./dist/test/test.js\" --read false",
     "mocha-coverage": "nyc mocha \"./dist/test/test.js\" --read false",
     "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "server": "node ./test/serverBoot.js"
