--- a/packages/tyranid-tdgen/package.json
+++ b/packages/tyranid-tdgen/package.json
@@ -12,7 +12,7 @@
     "tyranid-tdgen": "bin/tyranid-tdgen"
   },
   "scripts": {
-    "build": "rm -rf ./dist/ && tsc -d",
+    "build": "rm -rf ./dist/ && tsc",
     "pretest": "rm -rf generated && npm run build",
     "prepublish": "npm run test",
     "ava": "mkdir generated && ava",
