--- a/packages/tyranid-tdgen/tsconfig.json
+++ b/packages/tyranid-tdgen/tsconfig.json
@@ -2,31 +2,17 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
-    "moduleResolution" : "node",
+    "moduleResolution": "node",
+    "declaration": true,
     "strict": true,
     "removeComments": false,
     "pretty": true,
     "outDir": "./dist/",
     "inlineSourceMap": true,
     "skipLibCheck": true,
-    "lib": [
-      "es2015"
-    ],
-    "types": [
-      "mongodb",
-      "lodash",
-      "tyranid",
-      "commander"
-    ]
+    "lib": ["es2015"],
+    "types": ["mongodb", "lodash", "tyranid", "commander"]
   },
-  "include": [
-    "src",
-    "test",
-    "example/models"
-  ],
-  "exclude": [
-    "node_modules",
-    "test/compile-test",
-    "test/compile-client"
-  ]
+  "include": ["src", "test", "example/models"],
+  "exclude": ["node_modules", "test/compile-test", "test/compile-client"]
 }
