--- a/packages/tyranid-graphql/package.json
+++ b/packages/tyranid-graphql/package.json
@@ -10,10 +10,11 @@
   "typings": "dist/src/index.d.ts",
   "scripts": {
     "start": "npm run build && node ./dist/test/example/server.js",
-    "build": "rm -rf ./dist/ && tsc",
     "pretest": "npm run build",
     "prepublish": "npm run test",
-    "test": "ava"
+    "test": "ava",
+    "build": "npm run tsc",
+    "tsc": "rm -rf ./dist/ && tsc"
   },
   "author": "bsouthga@gmail.com",
   "license": "Apache-2.0",
