--- a/packages/tyranid-graphql/package.json
+++ b/packages/tyranid-graphql/package.json
@@ -10,11 +10,11 @@
   "typings": "dist/src/index.d.ts",
   "scripts": {
     "start": "npm run build && node ./dist/test/example/server.js",
-    "build": "rm -rf ./dist/ && npm run tsc",
     "pretest": "npm run build",
     "prepublish": "npm run test",
     "test": "ava",
-    "tsc": "tsc -d"
+    "build": "npm run tsc",
+    "tsc": "rm -rf ./dist/ && tsc"
   },
   "author": "bsouthga@gmail.com",
   "license": "Apache-2.0",
@@ -25,8 +25,6 @@
     "graphql": "^0.12.3"
   },
   "ava": {
-    "files": [
-      "dist/test/index.js"
-    ]
+    "files": ["dist/test/index.js"]
   }
 }
